# hydownloader-systray

./: .clang-format  .gitmodules  CMakeLists.txt  PKGBUILD  README.md  format.sh  settings.ini
.github/workflows/: release.yml
src/hydownloader-cpp/: hydownloaderconnection.cpp  hydownloaderconnection.h  hydownloaderjsonobjectlistmodel.cpp  hydownloaderjsonobjectlistmodel.h  hydownloaderlogmodel.cpp  hydownloaderlogmodel.h  hydownloadersingleurlqueuemodel.cpp  hydownloadersingleurlqueuemodel.h  hydownloadersubscriptionchecksmodel.cpp  hydownloadersubscriptionchecksmodel.h  hydownloadersubscriptionmodel.cpp  hydownloadersubscriptionmodel.h
src/hydownloader-systray/: addurlsdialog.cpp  addurlsdialog.h  addurlsdialog.ui  datetimeformatdelegate.cpp  datetimeformatdelegate.h  jsonobjectdelegate.cpp  jsonobjectdelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
